Subtyping-Checker-Extension/gen/SessionTypeParser.py
# Generated from SessionType.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class SessionTypeParser ( Parser ):

    grammarFileName = "SessionType.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'{'", "'}'", "'['", "']'", "';'", 
                     "','", "'.'", "'&'", "'rec'", "'end'", "'!'", "'?'", 
                     "<INVALID>", "'|'", "'$'" ]

    symbolicNames = [ "<INVALID>", "PLUS", "CLPAR", "CRPAR", "SLPAR", "SRPAR", 
                      "SEMIC", "COMMA", "DOT", "AND", "REC", "END", "OUT", 
                      "IN", "ID", "PRL", "DUALPRL", "WHITESP" ]

    RULE_start = 0
    RULE_stype = 1
    RULE_sprimetype = 2
    RULE_guarded = 3

    ruleNames =  [ "start", "stype", "sprimetype", "guarded" ]

    EOF = Token.EOF
    PLUS=1
    CLPAR=2
    CRPAR=3
    SLPAR=4
    SRPAR=5
    SEMIC=6
    COMMA=7
    DOT=8
    AND=9
    REC=10
    END=11
    OUT=12
    IN=13
    ID=14
    PRL=15
    DUALPRL=16
    WHITESP=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type = None
            self.s = None # StypeContext

        def EOF(self):
            return self.getToken(SessionTypeParser.EOF, 0)

        def stype(self):
            return self.getTypedRuleContext(SessionTypeParser.StypeContext,0)


        def getRuleIndex(self):
            return SessionTypeParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = SessionTypeParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            localctx.s = self.stype()
            localctx.type = localctx.s.type if localctx.s.type is not None else ""
            self.state = 10
            self.match(SessionTypeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type = None
            self.i = None # Token
            self.s = None # Token
            self.st = None # StypeContext
            self.c = None # Token
            self.i2 = None # Token
            self.s2 = None # Token
            self.st2 = None # StypeContext
            self.r = None # Token
            self.d = None # Token
            self.g = None # GuardedContext
            self.e = None # Token
            self.o = None # Token
            self.prl = None # Token
            self.spt = None # SprimetypeContext
            self.sl = None # Token
            self.o2 = None # Token
            self.sr = None # Token
            self.n = None # Token
            self.n2 = None # Token

        def PLUS(self):
            return self.getToken(SessionTypeParser.PLUS, 0)

        def CLPAR(self):
            return self.getToken(SessionTypeParser.CLPAR, 0)

        def CRPAR(self):
            return self.getToken(SessionTypeParser.CRPAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.ID)
            else:
                return self.getToken(SessionTypeParser.ID, i)

        def SEMIC(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.SEMIC)
            else:
                return self.getToken(SessionTypeParser.SEMIC, i)

        def stype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SessionTypeParser.StypeContext)
            else:
                return self.getTypedRuleContext(SessionTypeParser.StypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.COMMA)
            else:
                return self.getToken(SessionTypeParser.COMMA, i)

        def AND(self):
            return self.getToken(SessionTypeParser.AND, 0)

        def REC(self):
            return self.getToken(SessionTypeParser.REC, 0)

        def DOT(self):
            return self.getToken(SessionTypeParser.DOT, 0)

        def guarded(self):
            return self.getTypedRuleContext(SessionTypeParser.GuardedContext,0)


        def END(self):
            return self.getToken(SessionTypeParser.END, 0)

        def OUT(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.OUT)
            else:
                return self.getToken(SessionTypeParser.OUT, i)

        def PRL(self):
            return self.getToken(SessionTypeParser.PRL, 0)

        def sprimetype(self):
            return self.getTypedRuleContext(SessionTypeParser.SprimetypeContext,0)


        def DUALPRL(self):
            return self.getToken(SessionTypeParser.DUALPRL, 0)

        def SLPAR(self):
            return self.getToken(SessionTypeParser.SLPAR, 0)

        def SRPAR(self):
            return self.getToken(SessionTypeParser.SRPAR, 0)

        def IN(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.IN)
            else:
                return self.getToken(SessionTypeParser.IN, i)

        def getRuleIndex(self):
            return SessionTypeParser.RULE_stype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStype" ):
                listener.enterStype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStype" ):
                listener.exitStype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStype" ):
                return visitor.visitStype(self)
            else:
                return visitor.visitChildren(self)




    def stype(self):

        localctx = SessionTypeParser.StypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stype)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 12
                self.match(SessionTypeParser.PLUS)
                self.state = 13
                self.match(SessionTypeParser.CLPAR)
                localctx.type = "["
                self.state = 15
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 16
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 17
                localctx.st = self.stype()
                localctx.type += "!" + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 19
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 20
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 21
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 22
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + "!" + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 29
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                localctx.type += "]"
                self.state = 31
                self.match(SessionTypeParser.CRPAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.match(SessionTypeParser.AND)
                self.state = 34
                self.match(SessionTypeParser.CLPAR)
                localctx.type = "["
                self.state = 36
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 37
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 38
                localctx.st = self.stype()
                localctx.type += "?" + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 40
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 41
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 42
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 43
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + "?" + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 50
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                localctx.type += "]"
                self.state = 52
                self.match(SessionTypeParser.CRPAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                localctx.r = self.match(SessionTypeParser.REC)
                self.state = 55
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 56
                localctx.d = self.match(SessionTypeParser.DOT)
                self.state = 57
                localctx.g = self.guarded()
                localctx.type = (None if localctx.r is None else localctx.r.text) + " V" + (None if localctx.i is None else localctx.i.text) + " " + (None if localctx.d is None else localctx.d.text) + (localctx.g.type if not localctx.g.type == None else "")
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                localctx.i = self.match(SessionTypeParser.ID)
                localctx.type = "V" + (None if localctx.i is None else localctx.i.text)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                localctx.e = self.match(SessionTypeParser.END)
                localctx.type = (None if localctx.e is None else localctx.e.text)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 64
                localctx.o = self.match(SessionTypeParser.OUT)
                self.state = 65
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 66
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 67
                localctx.st = self.stype()
                localctx.type = (None if localctx.o is None else localctx.o.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                localctx.e = self.match(SessionTypeParser.END)
                self.state = 71
                localctx.prl = self.match(SessionTypeParser.PRL)
                self.state = 72
                localctx.spt = self.sprimetype()
                localctx.type = (None if localctx.e is None else localctx.e.text) + (None if localctx.prl is None else localctx.prl.text) + (None if localctx.spt is None else self._input.getText(localctx.spt.start,localctx.spt.stop)) + (localctx.spt.type if not localctx.spt.type == None else "") 
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 75
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 76
                localctx.prl = self.match(SessionTypeParser.PRL)
                self.state = 77
                localctx.spt = self.sprimetype()
                localctx.type = (None if localctx.i is None else localctx.i.text) + (None if localctx.prl is None else localctx.prl.text) + (None if localctx.spt is None else self._input.getText(localctx.spt.start,localctx.spt.stop)) + (localctx.spt.type if not localctx.spt.type == None else "") 
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 80
                localctx.e = self.match(SessionTypeParser.END)
                self.state = 81
                localctx.prl = self.match(SessionTypeParser.DUALPRL)
                self.state = 82
                localctx.spt = self.sprimetype()
                localctx.type = (None if localctx.e is None else localctx.e.text) + (None if localctx.prl is None else localctx.prl.text) + (None if localctx.spt is None else self._input.getText(localctx.spt.start,localctx.spt.stop)) + (localctx.spt.type if not localctx.spt.type == None else "") 
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 85
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 86
                localctx.prl = self.match(SessionTypeParser.DUALPRL)
                self.state = 87
                localctx.spt = self.sprimetype()
                localctx.type = (None if localctx.i is None else localctx.i.text) + (None if localctx.prl is None else localctx.prl.text) + (None if localctx.spt is None else self._input.getText(localctx.spt.start,localctx.spt.stop)) + (localctx.spt.type if not localctx.spt.type == None else "") 
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 90
                localctx.sl = self.match(SessionTypeParser.SLPAR)
                self.state = 91
                localctx.o = self.match(SessionTypeParser.OUT)
                self.state = 92
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 93
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 94
                localctx.st = self.stype()
                localctx.type = (None if localctx.sl is None else localctx.sl.text) + (None if localctx.o is None else localctx.o.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 96
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 97
                    localctx.o2 = self.match(SessionTypeParser.OUT)
                    self.state = 98
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 99
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 100
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + (None if localctx.o2 is None else localctx.o2.text) + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 108
                localctx.sr = self.match(SessionTypeParser.SRPAR)
                localctx.type += (None if localctx.sr is None else localctx.sr.text)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 111
                localctx.n = self.match(SessionTypeParser.IN)
                self.state = 112
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 113
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 114
                localctx.st = self.stype()
                localctx.type = (None if localctx.n is None else localctx.n.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 117
                localctx.sl = self.match(SessionTypeParser.SLPAR)
                self.state = 118
                localctx.n = self.match(SessionTypeParser.IN)
                self.state = 119
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 120
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 121
                localctx.st = self.stype()
                localctx.type = (None if localctx.sl is None else localctx.sl.text) + (None if localctx.n is None else localctx.n.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 123
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 124
                    localctx.n2 = self.match(SessionTypeParser.IN)
                    self.state = 125
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 126
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 127
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + (None if localctx.n2 is None else localctx.n2.text) + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 135
                localctx.sr = self.match(SessionTypeParser.SRPAR)
                localctx.type += (None if localctx.sr is None else localctx.sr.text)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SprimetypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type = None
            self.i = None # Token
            self.s = None # Token
            self.st = None # SprimetypeContext
            self.c = None # Token
            self.i2 = None # Token
            self.s2 = None # Token
            self.st2 = None # SprimetypeContext
            self.r = None # Token
            self.d = None # Token
            self.g = None # GuardedContext
            self.e = None # Token
            self.o = None # Token
            self.prl = None # Token
            self.spt = None # SprimetypeContext
            self.sl = None # Token
            self.o2 = None # Token
            self.sr = None # Token
            self.n = None # Token
            self.n2 = None # Token

        def PLUS(self):
            return self.getToken(SessionTypeParser.PLUS, 0)

        def CLPAR(self):
            return self.getToken(SessionTypeParser.CLPAR, 0)

        def CRPAR(self):
            return self.getToken(SessionTypeParser.CRPAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.ID)
            else:
                return self.getToken(SessionTypeParser.ID, i)

        def SEMIC(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.SEMIC)
            else:
                return self.getToken(SessionTypeParser.SEMIC, i)

        def sprimetype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SessionTypeParser.SprimetypeContext)
            else:
                return self.getTypedRuleContext(SessionTypeParser.SprimetypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.COMMA)
            else:
                return self.getToken(SessionTypeParser.COMMA, i)

        def AND(self):
            return self.getToken(SessionTypeParser.AND, 0)

        def REC(self):
            return self.getToken(SessionTypeParser.REC, 0)

        def DOT(self):
            return self.getToken(SessionTypeParser.DOT, 0)

        def guarded(self):
            return self.getTypedRuleContext(SessionTypeParser.GuardedContext,0)


        def END(self):
            return self.getToken(SessionTypeParser.END, 0)

        def OUT(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.OUT)
            else:
                return self.getToken(SessionTypeParser.OUT, i)

        def PRL(self):
            return self.getToken(SessionTypeParser.PRL, 0)

        def SLPAR(self):
            return self.getToken(SessionTypeParser.SLPAR, 0)

        def SRPAR(self):
            return self.getToken(SessionTypeParser.SRPAR, 0)

        def IN(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.IN)
            else:
                return self.getToken(SessionTypeParser.IN, i)

        def getRuleIndex(self):
            return SessionTypeParser.RULE_sprimetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSprimetype" ):
                listener.enterSprimetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSprimetype" ):
                listener.exitSprimetype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSprimetype" ):
                return visitor.visitSprimetype(self)
            else:
                return visitor.visitChildren(self)




    def sprimetype(self):

        localctx = SessionTypeParser.SprimetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sprimetype)
        self._la = 0 # Token type
        try:
            self.state = 256
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(SessionTypeParser.PLUS)
                self.state = 141
                self.match(SessionTypeParser.CLPAR)
                localctx.type = "["
                self.state = 143
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 144
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 145
                localctx.st = self.sprimetype()
                localctx.type += "!" + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 147
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 148
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 149
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 150
                    localctx.st2 = self.sprimetype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + "!" + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 157
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                localctx.type += "]"
                self.state = 159
                self.match(SessionTypeParser.CRPAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(SessionTypeParser.AND)
                self.state = 162
                self.match(SessionTypeParser.CLPAR)
                localctx.type = "["
                self.state = 164
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 165
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 166
                localctx.st = self.sprimetype()
                localctx.type += "?" + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 168
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 169
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 170
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 171
                    localctx.st2 = self.sprimetype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + "?" + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 178
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                localctx.type += "]"
                self.state = 180
                self.match(SessionTypeParser.CRPAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                localctx.r = self.match(SessionTypeParser.REC)
                self.state = 183
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 184
                localctx.d = self.match(SessionTypeParser.DOT)
                self.state = 185
                localctx.g = self.guarded()
                localctx.type = (None if localctx.r is None else localctx.r.text) + " V" + (None if localctx.i is None else localctx.i.text) + " " + (None if localctx.d is None else localctx.d.text) + (localctx.g.type if not localctx.g.type == None else "")
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 188
                localctx.i = self.match(SessionTypeParser.ID)
                localctx.type = "V" + (None if localctx.i is None else localctx.i.text)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 190
                localctx.e = self.match(SessionTypeParser.END)
                localctx.type = (None if localctx.e is None else localctx.e.text)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 192
                localctx.o = self.match(SessionTypeParser.OUT)
                self.state = 193
